--- a/configs/swinmoe-tiny-imnet/swin_moe_tiny.yaml
+++ b/configs/swinmoe-tiny-imnet/swin_moe_tiny.yaml
@@ -4,7 +4,7 @@ DATA:
   NUM_WORKERS: 0 # InnoDatahub only
 MODEL:
   TYPE: swin_moe
-  NAME: swin_moe_tiny_patch4_window6_192_tiny_imnet # Changed name
+  NAME: swin_moe_tiny_patch4_window6_192_tiny_imnet
   DROP_PATH_RATE: 0.2
   NUM_CLASSES: 200
   SWIN_MOE:
